--- a/styles.css
+++ b/styles.css
@@ -68,13 +68,14 @@ nav a:hover {
 }
 
 main {
+    overflow-y: auto;
     display: flex;
     justify-content: space-between;
     margin: 20px;
     padding: 20px;
     background-color: #fff;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-    height: calc(105vh - 160px);
+    height: calc(120vh - 160px);
 }
 
 aside {
@@ -82,7 +83,7 @@ aside {
     margin-right: 20px;
     margin-left: 20px;
 }
-/* --------------------- */
+
 table {
     border-collapse: collapse;
     width: 100%;
@@ -135,16 +136,6 @@ p, li {
     border-radius: 50%;
 }
 
-footer {
-    background-color: #d4d4d4;
-    color: white;
-    text-align: center;
-    padding: 1rem 0;
-    position: absolute;
-    bottom: 2;
-    width: 100%;
-}
-
 .right {
     text-align: center;
 }
@@ -155,4 +146,14 @@ footer {
 
 .underline-link:hover {
     text-decoration: none;
+}
+
+footer {
+    background-color: #d4d4d4;
+    color: white;
+    text-align: center;
+    padding: 1rem 0;
+    position: bottom;
+    bottom: 2;
+    width: 100%;
 }
