added logos to contact, removed dots

--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,10 @@
 /* Reset some defaults browser styles */
 
+* {
+    margin: 0;
+    padding: 0;
+}
+
 body, h1, h2, h3, p, ul, li {
     margin: 0;
     padding: 0;
