--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,9 @@
 * {
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
+    font-family: 'Arial';
+    /* transition: all 0.3s ease; */
 }
 
 body, h1, h2, h3, p, ul, li {
@@ -80,7 +83,7 @@ main {
     padding: 20px;
     background-color: #fff;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-    height: calc(125vh - 160px);
+    height: calc(135vh - 160px);
 }
 
 aside {
@@ -161,4 +164,9 @@ footer {
     position: bottom;
     bottom: 2;
     width: 100%;
+}
+
+#contact-me {
+    font-size: 1em;
+    line-height: 2;
 }
